<resources>    <string name="app_name">河南省进村入户直报</string>    <string name="sms_content">【毕节特色农业】您的验证码是"%s"，为了保证账户安全，请勿向他人泄露，如非本人操作请忽略本短信</string>    <string name="login">登陆</string>    <string name="network_isnot_available">网络不可用</string>    <string name="user_name_cannot_be_empty">用户名不能为空！</string>    <string name="password_cannot_be_empty">密码不能为空！</string>    <string name="forgot_your_password">忘记密码？</string>    <string name="username">用户名</string>    <string name="mobile">手机号</string>    <string name="password">密码</string>    <string name="new_password">新密码</string>    <string name="verification_code">验证码</string>    <string name="other_login">其他登录方式</string>    <string name="nxt">北京农信通科技有限责任公司</string>    <string name="registered">注册</string>    <string name="forget_password">忘记密码</string>    <string name="change_password">修改密码</string>    <string name="confirm_password">确认密码</string>    <string name="Is_landing">正在登陆……</string>    <string name="re_get_sms">重新获取\n\r验证码(%ss)</string>    <string name="get_sms">重新获取\n\r验证码</string>    <string name="get_sms_suc">获取验证码成功</string>    <string name="get_sms_def">获取验证码失败</string>    <string name="error_sms_code">请输入正确的验证码</string>    <string name="copright">© 2017 北京农信通科技有限责任公司</string></resources>