<?xml version="1.0" encoding="utf-8"?><RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-autp"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    tools:context=".mvp.ui.fragment.LoginFragment">    <RelativeLayout        android:id="@+id/dl0"        android:layout_width="300dp"        android:layout_height="wrap_content"        android:layout_alignParentTop="true"        android:layout_centerHorizontal="true"        android:layout_marginBottom="32dp"        android:layerType="hardware"        android:visibility="gone">        <com.nxt.bijie.featuresagr.widget.TextViewNew            android:id="@+id/tvOtherLogin"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerInParent="true"            android:layout_marginTop="10dp"            android:text="@string/app_name"            android:textColor="@color/colorPrimary"            android:textSize="34sp"            android:textStyle="bold"/>        <View            android:id="@+id/line"            android:layout_width="match_parent"            android:layout_height="1dp"            android:layout_below="@id/tvOtherLogin"            android:layout_marginLeft="160dp"            android:layout_marginStart="160dp"            android:background="@color/colorPrimary"            android:visibility="gone"/>    </RelativeLayout>    <RelativeLayout        android:id="@+id/root_dl"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:gravity="center_vertical"        android:layerType="hardware">        <android.support.v7.widget.CardView            android:id="@+id/cv"            android:layout_width="300dp"            android:layout_height="wrap_content"            android:layout_centerHorizontal="true"            app:cardCornerRadius="6dp"            app:cardElevation="3dp"            app:cardPreventCornerOverlap="false"            app:cardUseCompatPadding="true">            <LinearLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:orientation="vertical">                <RelativeLayout                    android:layout_width="match_parent"                    android:layout_height="45dp"                    android:layout_marginTop="10dp">                    <View                        android:layout_width="8dp"                        android:layout_height="match_parent"                        android:layout_alignParentLeft="true"                        android:layout_alignParentStart="true"                        android:background="@color/colorPrimaryDark"/>                    <TextView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_centerVertical="true"                        android:layout_marginLeft="30dp"                        android:layout_marginStart="30dp"                        android:text="@string/login"                        android:textColor="#FFCC00"                        android:textSize="18sp"                        android:textStyle="bold"/>                </RelativeLayout>                <android.support.design.widget.TextInputLayout                    android:id="@+id/usernameWrapper"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginEnd="30dp"                    android:layout_marginLeft="30dp"                    android:layout_marginRight="30dp"                    android:layout_marginStart="30dp"                    android:layout_marginTop="@dimen/activity_vertical_margin"                    android:textColorHint="#c5c5c5">                    <EditText                        android:id="@+id/username"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:hint="@string/mobile"                        android:inputType="phone"                        android:textColor="#2fa881"                        android:textCursorDrawable="@drawable/bg_input_cursor"                    />                </android.support.design.widget.TextInputLayout>                <android.support.design.widget.TextInputLayout                    android:id="@+id/passwordWrapper"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginEnd="30dp"                    android:layout_marginLeft="30dp"                    android:layout_marginRight="30dp"                    android:layout_marginStart="30dp"                    android:textColorHint="#c5c5c5"                    app:passwordToggleEnabled="true">                    <EditText                        android:id="@+id/password"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:hint="@string/password"                        android:inputType="textPassword"                        android:textColor="#2fa881"                        android:textCursorDrawable="@drawable/bg_input_cursor"                    />                </android.support.design.widget.TextInputLayout>                <RelativeLayout                    android:layout_width="match_parent"                    android:layout_height="60dp"                    android:layout_marginTop="25dp"                    android:gravity="center">                    <Button                        android:id="@+id/btnLogin"                        android:layout_width="150dp"                        android:layout_height="44dp"                        android:background="@drawable/bt_shape_gray"                        android:stateListAnimator="@drawable/state_list_animator_z"                        android:text="@string/login"                        android:textColor="@color/home_text_black_color"/>                </RelativeLayout>                <TextView                    android:id="@+id/tv_forget_password"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_gravity="center_horizontal"                    android:layout_marginBottom="@dimen/activity_vertical_margin"                    android:layout_marginTop="5dp"                    android:text="@string/forgot_your_password"                    android:textColor="#9a9a9a"                    android:textSize="12sp"/>            </LinearLayout>        </android.support.v7.widget.CardView>        <android.support.design.widget.FloatingActionButton            android:id="@+id/btnRegistered"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_alignEnd="@id/cv"            android:layout_alignRight="@id/cv"            android:layout_alignTop="@id/cv"            android:layout_marginEnd="-20dp"            android:layout_marginRight="-20dp"            android:layout_marginTop="25dp"            android:src="@drawable/ic_add_white_24dp"            app:borderWidth="1dp"            app:elevation="3dp"            app:fabSize="normal"            app:pressedTranslationZ="0dp"/>    </RelativeLayout>    <!--<no.agens.depth.lib.DepthLayout-->    <!--android:id="@+id/appbar"-->    <!--android:layout_width="@dimen/fab_size"-->    <!--android:layout_height="@dimen/fab_size"-->    <!--android:layout_below="@+id/root_dl"-->    <!--android:layout_centerHorizontal="true"-->    <!--android:layout_marginTop="-38dp"-->    <!--android:layerType="hardware"-->    <!--app:custom_elevation="1dp"-->    <!--app:edge_color="@color/fab"-->    <!--app:is_circle="true">-->    <!--<android.support.design.widget.FloatingActionButton-->    <!--android:id="@+id/btnLogin"-->    <!--android:layout_width="match_parent"-->    <!--android:layout_height="match_parent"-->    <!--android:layout_margin="1dp"-->    <!--android:clickable="true"-->    <!--android:layerType="hardware"-->    <!--android:src="@drawable/ic_send_black_24dp"-->    <!--app:backgroundTint="@color/theme_red"-->    <!--app:borderWidth="1dp"-->    <!--app:elevation="0dp"-->    <!--app:pressedTranslationZ="0dp" />-->    <!--<com.jpardogo.android.googleprogressbar.library.GoogleProgressBar-->    <!--android:id="@+id/google_progress"-->    <!--android:layout_width="match_parent"-->    <!--android:layout_height="match_parent"-->    <!--android:layout_gravity="center"-->    <!--android:visibility="gone"-->    <!--app:type="folding_circles" />-->    <!--</no.agens.depth.lib.DepthLayout>-->    <RelativeLayout        android:id="@+id/dl2"        android:layout_width="300dp"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:layout_centerHorizontal="true"        android:layout_marginBottom="32dp"        android:layerType="hardware">        <com.cauc.mavenj.widget.TextViewNew            android:id="@+id/tv_app_name"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerInParent="true"            android:text="@string/copright"            android:textColor="@color/white"            android:textSize="16sp"            android:textStyle="bold"/>    </RelativeLayout></RelativeLayout>